--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@firebase/firestore": "^3.4.1",
     "core-js": "^3.6.5",
     "firebase": "^9.6.1",
+    "sweetalert2": "^11.3.0",
     "vue": "^2.6.11",
+    "vue-firestore": "^0.3.30",
     "vue-router": "^3.2.0",
+    "vue2-editor": "^2.10.3",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
