--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "firebase": "^9.6.1",
     "sweetalert2": "^11.3.0",
     "vue": "^2.6.11",
+    "vue-carousel": "^0.18.0",
     "vue-firestore": "^0.3.30",
     "vue-router": "^3.2.0",
     "vue2-editor": "^2.10.3",
-    "vuetify": "^2.4.0"
+    "vue2-filters": "^0.13.0",
+    "vuetify": "^2.4.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
