--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "@firebase/firestore": "^3.4.1",
     "core-js": "^3.6.5",
     "firebase": "^9.6.1",
+    "intro.js": "^5.1.0",
+    "lodash": "^4.17.21",
     "sweetalert2": "^11.3.0",
+    "swipe": "^1.7.7",
+    "swiper": "^6.8.4",
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
+    "vue-color": "^2.8.1",
     "vue-firestore": "^0.3.30",
     "vue-router": "^3.2.0",
     "vue2-editor": "^2.10.3",
